https://github.com/satriyohutama/batan.git

--- a/PengelolaanAngkaKredit/nbproject/project.properties
+++ b/PengelolaanAngkaKredit/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/PengelolaanAngkaKredit.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.itextpdf-5.4.3.jar=lib/itextpdf-5.4.3.jar
 file.reference.jcalendar-1.4.jar=lib/jcalendar-1.4.jar
 file.reference.JTattoo-1.6.11.jar=lib/JTattoo-1.6.11.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=lib/MySQLDriver/mysql-connector-java-5.1.23-bin.jar
@@ -37,7 +38,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
     ${file.reference.JTattoo-1.6.11.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.itextpdf-5.4.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
